--- a/main.css
+++ b/main.css
@@ -15,16 +15,19 @@ body{
 }
 
 #header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   height: 55px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  background-color: white;
 }
 
 #header-img{
-  width: 100%;
   height: auto;
   max-width: 300px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   text-align: center;
   margin-left: 20px;
 }
@@ -33,8 +36,10 @@ nav > a {
   padding: 0 2rem;
   margin-left:1.5rem;
 }
-div{
+main{
   text-align: center;
+  margin-top: 80px;
+
 }
 
 #submit {
@@ -53,13 +58,57 @@ input[type="email"] {
   padding: .32rem;
 }
 #features{
-  width:70vw;
+  width:80vw;
   margin: auto;
 }
-p,.premium h2{
+ #features p{
+   margin-top:.1rem;
+}
+#features h2{
+  margin:0; 
+}
+iframe{
+  display: block;
+  margin: auto;
+}
+
+.products{
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: .5rem;
+  margin-bottom: .5rem;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+}
+.product{
+  background-color: #EEEEEE;
+    border: 1px black solid;
+    height: fit-content;
+    text-align: center;
+    border-radius: 3px;
+    margin-top: .5rem;
+    padding: 0 0 .5rem;
+    width: 280px;
+}
+.button{
+  padding: 1rem 1.5rem;
+  background-color: orange;
+}
+.flutes{
+  background-color: #c3c3c3;
+  padding-top: .5rem;
+
   margin: 0;
-  padding: .2rem;
-  width: 80vw;
+  font-weight: 800;
+}
+footer{
+  margin-bottom: 5px;
+  display: flex;
+  justify-content: flex-end;
+}
+footer>span{
+  margin-top: 5px;
+  margin-left: 5px;
 }
 
 
@@ -73,17 +122,23 @@ p,.premium h2{
 .justify-contents{
   justify-content: space-between;
 }
+.justify-center{
+  justify-content: center;
+}
 .align-center{
   align-items: center;
 }
 .flex-grow{
-  flex-grow: 1;
+  flex-grow: .6;
 }
 .flex-col{
   flex-direction: column;
 }
 .flex-start{
    align-items: flex-start;
+}
+.flex-end{
+  align-items: flex-end;
 }
   /* HELPER STYLES END
 ======================
